# python-cuddle

./: .flake8  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: ci.yml  release.yml
cuddle/: __init__.py  _escaping.py  decoder.py  encoder.py  exception.py  formatter.py  grammar.py  grammar.tatsu  parser.py  structure.py
tests/: complex.kdl  complex_formatted.kdl  test_complex.py  test_failures.py  test_main.py  test_solo.py  test_structures.py  test_types.py  test_upstream.py
